# example-voting-app

./: .gitignore  MAINTAINERS  README.md  docker-compose.yml
k8s-specifications/: db-deployment.yaml  db-service.yaml  redis-deployment.yaml  redis-service.yaml  result-deployment.yaml  result-service.yaml  vote-deployment.yaml  vote-service.yaml  worker-deployment.yaml
result/: Dockerfile  package.json  server.js
result/views/: app.js
vote/: Dockerfile  pyproject.toml
worker/: Dockerfile
worker/src/: Program.cs
