[tool.poetry]
name = "vote"
version = "1.0.0"
description = "Kubernetes Example Voting App"
authors = ["Mohammed Abdel Raouf <mohammed@raouf.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
redis = "^4.2.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
